# convertidor-voz-texto

./: README.md  pyproject.toml  requirements.txt
