[tool.poetry]
name = "convertidorvoztexto"
version = "0.1.0"
description = ""
authors = ["Gabriel Villacis <gab_villacis@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
